fix dark mode color and code

--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -30,7 +30,9 @@ form {
    background: linear-gradient(to right, #956a4e, #8b6248);
    padding: 20px;
    border-radius: 8px;
-   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+   /*box-shadow: 10px 10px 5px rgba(0,0,0,0.1);*/
+   box-shadow:
+      0.3em 0.3em 1em rgba(4, 4, 4, 0.6);
    max-width: 500px;
    margin: 20px auto;
 }
@@ -55,7 +57,7 @@ button {
 }
 
 button:hover {
-   background-color: #a6a19a;
+   background-color: #544e45;
 }
 
 #recipes {
@@ -157,6 +159,8 @@ button:hover {
 .taskbar {
    background: linear-gradient(to right, #546832, #3a4920);
    overflow: hidden;
+   box-shadow:
+      0.3em 0.3em 1em rgba(4, 4, 4, 0.6);
 }
 
 .taskbar ul {
@@ -200,7 +204,7 @@ nav{
    text-align: center;
 }
 .dark-mode {
-   background-color: #141311 !important;
+   background-color: #190f06 !important;
    color: rgb(229, 236, 227);
 }
 
@@ -212,16 +216,20 @@ nav{
 
 .dark-mode .taskbar {
    /*background-color: #3c5123;*/
-   background: linear-gradient(to right, #435328, #242e14);
+   background: linear-gradient(to right, #3d4c23, #19210e);
    overflow: hidden;
+   box-shadow:
+      0.3em 0.3em 1em rgba(4, 4, 4, 0.6);
 }
 
 .dark-mode .taskbar li a:hover {
    background-color: #8e511c;
 }
 
-.dark-mode .footer{
-   background: linear-gradient(to right, #566b34, #1e2611);
+.dark-mode footer{
+   background: linear-gradient(to right, #465728, #252f14) !important;
+   box-shadow:
+      0.3em 0.3em 1em rgba(4, 4, 4, 0.6);
 }
 
 .dark-mode button {
@@ -230,12 +238,13 @@ nav{
 }
 
 .dark-mode button:hover {
-   background-color: #a6a19a;
+   background-color: #3e311f;
 }
 
 .dark-mode form {
    background: linear-gradient(to right, #694b37, #4a3426);
-   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.102);
+   box-shadow:
+      0.3em 0.3em 1em rgba(4, 4, 4, 0.6);
 }
 .recipe-grid {
    display: grid;
@@ -268,6 +277,8 @@ nav{
    font-size: 1em;
    color: white;
    background: linear-gradient(to right, #718b43, #3a4920);
+   box-shadow:
+      0.3em 0.3em 1em rgba(4, 4, 4, 0.6);
 }
 
 #page-container {
